--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -11,13 +11,14 @@
         <div class="card-body">
           <h5 class="card-title">{{book.name}}</h5>
           <p class="card-text">{{book.author}}</p>
-          <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
+          <button type="button" *ngIf="authService.isUserInRole('ROLE_ADMIN')" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
           <app-book-edit-modal [editableBook]="book" (updateBookEvent)="onUpdateBook($event)"></app-book-edit-modal>
           <!-- <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button> -->
-          <button type="button" class="btn btn-danger mx-2" data-bs-toggle="modal" data-bs-target="#deleteBookModal" data-bs-whatever="@getbootstrap">Delete book</button>
+          <button type="button" *ngIf="authService.isUserInRole('ROLE_ADMIN')" class="btn btn-danger mx-2" data-bs-toggle="modal" data-bs-target="#deleteBookModal" data-bs-whatever="@getbootstrap">Delete book</button>
           <app-book-delete-modal [deletedBook]="book" (deleteBookEvent)="onDeleteBook($event)"></app-book-delete-modal>
-          <button type="button" class="btn btn-secondary mx-2" data-bs-toggle="modal" data-bs-target="#addToFavorites" (click)="addToFavorites(book.id)" type="submit" data-bs-whatever="@getbootstrap">Add to favorites</button>
-          <button type="button" class="btn btn-secondary mx-2" data-bs-toggle="modal" data-bs-target="#addToFavorites" (click)="deleteFromFavorites(book.id)" type="submit" data-bs-whatever="@getbootstrap">Delete from favorites</button>
+          <!-- <button type="button" class="btn btn-secondary mx-2" data-bs-toggle="modal" data-bs-target="#addToFavorites" (click)="addToFavorites(book.id)" type="submit" data-bs-whatever="@getbootstrap">Add to favorites</button>
+          <button type="button" class="btn btn-secondary mx-2" data-bs-toggle="modal" data-bs-target="#addToFavorites" (click)="deleteFromFavorites(book.id)" type="submit" data-bs-whatever="@getbootstrap">Delete from favorites</button> -->
+          <app-favorites-button [bookId]="book.id"></app-favorites-button>
           <button type="button" class="btn btn-primary mx-2" [routerLink]="['/book-details', book.id]">View More Details</button>
         </div>
       </div>
